Product Repository - Simplify